# ResumeSubmission

./: .gitignore  README.md  自动投递简历系统技术方案.md
backend/: .env.example  README.md  alembic.ini  docker-compose.services.yml  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260526_0001_initial_schema.py
backend/app/: bootstrap.py  main.py
backend/app/adapters/: base.py  registry.py
backend/app/adapters/android/: boss_android_adapter.py
backend/app/api/: router.py
backend/app/api/routes/: devices.py  health.py  jobs.py  message_templates.py  platforms.py  profiles.py  runs.py  tasks.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/drivers/android/: adb.py  appium_driver.py  base.py  mock.py
backend/app/execution/: message_rendering.py  task_executor.py
backend/app/models/: __init__.py  base.py  entities.py  types.py
backend/app/schemas/: common.py  devices.py  jobs.py  message_templates.py  platforms.py  profiles.py  runs.py  tasks.py
backend/app/services/: device_service.py  job_service.py  message_template_service.py  platform_service.py  profile_service.py  run_service.py  task_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_android_driver_support.py  test_task_service.py
docs/: 01-项目目录结构.md  02-数据库表设计.md  03-API设计.md  04-Boss-Android-MVP实施清单.md
